# fastapi-heroes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.prod.yml  compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py
app/: classes.py  database.py  main.py  test_main.py
app/routers/: heroes.py  teams.py
config/: generate_schema.py  nginx.conf  schema.dbml  schema.md  schema.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  PRODUCTION_DEPLOYMENT.md  SCHEMA_GENERATOR.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
